[gd_scene load_steps=4 format=3 uid="uid://dlkamqxjin8r8"]

[ext_resource type="Script" path="res://scripts/menu/main_menu.gd" id="1_kdx8m"]

[sub_resource type="Animation" id="Animation_tvn6k"]
resource_name = "Splash"
length = 4.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(545, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-201, -0.25, 0, 0, 314, 279, -0.5, 108.5, 0.4, -53, 278.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.8, 3.4)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.5, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjj5v"]
_data = {
"Splash": SubResource("Animation_tvn6k")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kdx8m")

[node name="TitleScreen" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -58.0
offset_right = 75.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="PlayBtn" type="Button" parent="TitleScreen"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="ExitBtn" type="Button" parent="TitleScreen"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="LevelSelect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.0
offset_top = 123.0
offset_right = 52.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 44
text = "Time to Fear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.424
anchor_top = 0.365
anchor_right = 0.58
anchor_bottom = 0.643
offset_left = 2.27997
offset_top = 15.7
offset_right = -72.4
offset_bottom = -59.4594
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
theme_override_constants/separation = 16

[node name="FPSBtn" type="Button" parent="LevelSelect/HBoxContainer"]
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30

[node name="Label" type="Label" parent="LevelSelect/HBoxContainer/FPSBtn"]
self_modulate = Color(1, 0, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "FEAR OF KAUNAS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelSelect"]
libraries = {
"": SubResource("AnimationLibrary_yjj5v")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 715.0
mouse_filter = 2
color = Color(1, 0, 1, 0.117647)

[connection signal="pressed" from="TitleScreen/PlayBtn" to="." method="show_level_select"]
[connection signal="pressed" from="TitleScreen/ExitBtn" to="." method="exit_game"]
[connection signal="pressed" from="LevelSelect/HBoxContainer/FPSBtn" to="." method="start_fps_level"]
[connection signal="animation_finished" from="LevelSelect/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="ready" from="LevelSelect/AnimationPlayer" to="." method="_on_animation_player_ready"]
